@@ -1,3 +1,8 @@
+2008-08-17  Moritz  <moritz@gnu.org>
+
+	* Makefile.am: Added several missing instances of DESTDIR. Thanks
+	to Joachim Breitner.
+
 2008-08-07  Moritz  <moritz@gnu.org>
 
 	* poldi.conf.skel: New file.
