@@ -1,3 +1,8 @@
+2008-08-17  Moritz  <moritz@gnu.org>
+
+	* configure.ac: Be more verbose in respect to setting the PAM
+	module directory.
+
 2008-08-08  Moritz  <moritz@gnu.org>
 
 	* configure.ac: Bump version number up to 0.5-cvs.
